# pii-anonymization-service

./: .env.example  .gitignore  BENCHMARKING.md  BENCHMARK_SUMMARY.md  DEPLOYMENT_TEST_RESULTS.md  Dockerfile  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_JOURNEY.md  PERFORMANCE_IMPROVEMENTS.md  PHASE_1_BATCH_MESSAGES_IMPLEMENTATION.md  PHASE_1_STATUS.md  PHASE_3_OPTIMIZATION_SUMMARY.md  README.md  STREAMING_OPTIMIZATION_SUMMARY.md  batch_size_optimization_results.json  benchmark_concurrent_log.txt  benchmark_live.txt  benchmark_output.txt  docker-compose.multi.yml  docker-compose.yml  envoy.yaml  nginx.conf  openapi.yaml  profile.stats  profile_benchmark_results.json  profile_report.txt  pyproject.toml  results_batch_100.json  results_batch_200.json  results_batch_500.json  results_parallel_streaming.json  results_redis_optimized.json  results_redis_optimized_100k.json  test_data_10k.ndjson  test_redis_cycle.json  test_results.json  test_reversibility.py  test_unstructured.json
benchmarks/: .gitkeep  benchmark_concurrent.py  benchmark_hr_concurrent.py  benchmark_hr_concurrent_simple.py  benchmark_hr_realistic.py  benchmark_structured.py  benchmark_unstructured.py  benchmark_v2.py  benchmark_v2_large.py  benchmark_v2_simple.py
policies/: .gitkeep  example_policy.yaml
scripts/: .gitkeep  BenchmarkHelpers.ps1  Run-StructuredMultiBenchmark.ps1  Run-StructuredSingleBenchmark.ps1  Run-UnstructuredMultiBenchmark.ps1  Run-UnstructuredQualityCheck.ps1  Run-UnstructuredSingleBenchmark.ps1  benchmark_grpc.py  compile_proto_v2.sh  generate_benchmark_report.py  generate_hr_test_data.py  (+14 more)
(+76 files in other folders)
